--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,21 @@
   color: #61dafb;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgba(255,255,255,.8);
+  padding: 10px;
+}
+
+.grid-item {
+  background-color: rgba(255,255,255,.8);
+  border: 1px solid rgba(0,0,0,0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
